# ocr-braille-diagram-tools

./: Cargo.toml  README.md  easier.sh  easy.sh
done/and-gate/: braille.json  out.json
done/clock-timing-d-flip-flop/: braille.json  whiteout.json
done/example-of-microprocessor/: braille.json  whiteout.json
done/fa-4/: braille.json  whiteout.json
done/full-adder/: out.json
done/or-gate/: braille.json
done/xor-gate/: braille.json  whiteout.json
ocr-json-common/: Cargo.toml
ocr-json-common/src/: lib.rs
